update title and description

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
-    <meta name="description" content="My Blog">
+    <title>chrmzio blog</title>
+    <meta name="description" content="chrmzio blog">
     <meta name="author" content="Jan Charamza">
     <link rel="stylesheet" href="style.css">
 </head>
