add dotty to projects list

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,15 @@
 
 <h3 id="notes-tui-manager-written-in-spring-shell">Notes TUI Manager Written In Spring Shell</h3>
 
+<p>WIP: Now I am working two things, one being <strong>bib</strong> for building static sites (this blog is built with it)
+and second is <strong>dotty</strong>, which is going to be dotfiles manager.</p>
+
+<p><a href="https://github.com/chrmzio/dotty" target="_blank">
+  <img src="https://opengraph.githubassets.com/12345ab/chrmzio/dotty" alt="dotfiles manager" />
+</a></p>
+
+<h3 id="notes-tui-manager-written-in-spring-shell-1">Notes TUI Manager Written In Spring Shell</h3>
+
 <p>My first attempt to write CLI with <a href="https://spring.io/projects/spring-shell" target="_blank">Spring Shell</a>.
 It is not finished and I plan to get back to it one day.</p>
 
