--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         <article>
             <h1 id="projects">Projects</h1>
 
-<h3 id="notes-tui-manager-written-in-spring-shell">Notes TUI Manager Written In Spring Shell</h3>
+<h3 id="dotfiles-manager-written-in-go">Dotfiles manager written in Go</h3>
 
 <p>WIP: Now I am working two things, one being <strong>bib</strong> for building static sites (this blog is built with it)
 and second is <strong>dotty</strong>, which is going to be dotfiles manager.</p>
@@ -49,7 +49,7 @@ and second is <strong>dotty</strong>, which is going to be dotfiles manager.</p>
   <img src="https://opengraph.githubassets.com/12345ab/chrmzio/dotty" alt="dotfiles manager" />
 </a></p>
 
-<h3 id="notes-tui-manager-written-in-spring-shell-1">Notes TUI Manager Written In Spring Shell</h3>
+<h3 id="notes-tui-manager-written-in-spring-shell">Notes TUI Manager Written In Spring Shell</h3>
 
 <p>My first attempt to write CLI with <a href="https://spring.io/projects/spring-shell" target="_blank">Spring Shell</a>.
 It is not finished and I plan to get back to it one day.</p>
