--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 
 <h3 id="dotfiles-manager-written-in-go">Dotfiles manager written in Go</h3>
 
-<p>WIP: Now I am working two things, one being <strong>bib</strong> for building static sites (this blog is built with it)
+<p>WIP: Now I am working on two things, one being <strong>bib</strong> for building static sites (this blog is built with it)
 and second is <strong>dotty</strong>, which is going to be dotfiles manager.</p>
 
 <p><a href="https://github.com/chrmzio/dotty" target="_blank">
